Add basic entities

--- a/Roguelike/Roguelike.fsproj
+++ b/Roguelike/Roguelike.fsproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Entity.fs" />
     <Compile Include="MonoGame.fs" />
     <Compile Include="Program.fs" />
     <None Include="packages.config" />
